libspdm: Create and use the libspdm library
Create a standalone libspdm lib. This contains the main helper
functions, which are then called by the final SPDM-Utils binary.

The future plans are to allow building the library with no_std Rust.

Signed-off-by: Alistair Francis <alistair.francis@wdc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,12 @@ readme = "README.md"
 no_std = []
 
 [lib]
-name = "no_std_responder"
-required-features = ["no_std"]
+name = "libspdm"
+path = "src/libspdm/lib.rs"
+
+[[bin]]
+name = "spdm_utils"
+path = "src/main.rs"
 
 [build-dependencies]
 bindgen = "0.63"
