--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 readme = "README.md"
 
 [features]
+default = ["std"]
+
 no_std = []
+std = ["clap", "memmap2", "once_cell", "sha2", "env_logger"]
 
 [lib]
 name = "libspdm"
@@ -22,9 +25,10 @@ path = "src/main.rs"
 bindgen = "0.63"
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
-memmap2 = "0.5"
-once_cell = "1.16"
-sha2 = "0.10"
-log = "0.4.20"
-env_logger = "0.7.0"
+log = "0.4"
+
+clap = { version = "4.0", features = ["derive"], optional = true }
+memmap2 = { version = "0.5", optional = true}
+once_cell = { version = "1.16", optional = true}
+sha2 = { version = "0.10", optional = true}
+env_logger = { version = "0.7.0", optional = true}
