tock-responder: Makefile: add clean target
Signed-off-by: Wilfred Mallawa <wilfred.mallawa@wdc.com>

--- a/tock-responder/Makefile
+++ b/tock-responder/Makefile
@@ -37,3 +37,8 @@ $(eval $(call spdm_build,nrf52,thumbv7em-none-eabi))
 $(eval $(call spdm_build,imxrt1050,thumbv7em-none-eabi))
 $(eval $(call spdm_build,msp432,thumbv7em-none-eabi))
 $(eval $(call spdm_build,clue_nrf52840,thumbv7em-none-eabi))
+
+.PHONY: clean
+clean:
+		cargo clean
+		rm -rf target
