transport: usb-i2c support
This adds a supporting transport layer, designed to work with the
libtock-rs usb-i2c bridge app.

Signed-off-by: Wilfred Mallawa <wilfred.mallawa@wdc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ bindgen = "0.63"
 
 [dependencies]
 log = "0.4"
+serialport = "4.3.0"
+lazy_static = "1.4.0"
 
 clap = { version = "4.0", features = ["derive"], optional = true }
 memmap2 = { version = "0.5", optional = true}
