Cargo: Add libmctp as a dependency
Signed-off-by: Alistair Francis <alistair.francis@wdc.com>

--- a/tock-responder/Cargo.toml
+++ b/tock-responder/Cargo.toml
@@ -46,6 +46,8 @@ critical-section = { version = "1.0" }
 
 once_cell = { version = "1.16", default-features = false, features = ["critical-section"] }
 
+libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
+
 [build-dependencies]
 libtock_build_scripts = { path = "libtock-rs/build_scripts"}
 
