--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,5 @@ memmap2 = { version = "0.5", optional = true}
 once_cell = { version = "1.16", optional = true}
 sha2 = { version = "0.10", optional = true}
 env_logger = { version = "0.10", optional = true}
+
+libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
