--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,8 @@ sha2 = { version = "0.10", optional = true}
 env_logger = { version = "0.10", optional = true}
 
 libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
+
+[dependencies.pyo3]
+version = "0.20.2"
+features = ["auto-initialize", "abi3-py312"]
+
