--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ certs/slot*/bundle*
 certs/slot*/immutable.sha
 manifest.cbor
 manifest/manifest.out.cbor
+manifest/responder_manifest.cbor
+manifest/*.pretty
 
