--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ path = "src/main.rs"
 
 [build-dependencies]
 bindgen = "0.63"
+which = "6.0.0"
 
 [dependencies]
 log = "0.4"
@@ -34,10 +35,7 @@ memmap2 = { version = "0.5", optional = true}
 once_cell = { version = "1.16", optional = true}
 sha2 = { version = "0.10", optional = true}
 env_logger = { version = "0.10", optional = true}
+colored = "2.1.0"
+which = "6.0.0"
 
 libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
-
-[dependencies.pyo3]
-version = "0.20.2"
-features = ["auto-initialize", "abi3-py312"]
-
