--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 default = ["std"]
 
 no_std = []
-std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static"]
+std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which"]
 
 [lib]
 name = "libspdm"
@@ -35,7 +35,7 @@ memmap2 = { version = "0.5", optional = true}
 once_cell = { version = "1.16", optional = true}
 sha2 = { version = "0.10", optional = true}
 env_logger = { version = "0.10", optional = true}
-colored = "2.1.0"
-which = "6.0.0"
+colored =  { version = "2.1", optional = true }
+which =  { version = "6.0", optional = true }
 
 libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
