--- a/certs/openssl.cnf
+++ b/certs/openssl.cnf
@@ -1,28 +1,51 @@
 ### REF: https://www.openssl.org/docs/man1.1.1/man3/ASN1_generate_nconf.html
 
-oid_section = OIDs
+[ device_ca ]
+basicConstraints = CA:true
+keyUsage = cRLSign, keyCertSign, digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment, keyAgreement, keyCertSign, cRLSign
+subjectKeyIdentifier = hash
+extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning
 
-[ v3_end ]
+1.3.6.1.4.1.412.274.6 = ASN1:SEQUENCE:device_ca_spdm_cert_oids # id-spdm-cert-oids
+
+2.23.133.5.4.100.6 = ASN1:NULL # tcg-dice-kp-identityInit
+2.23.133.5.4.100.12 = ASN1:NULL # tcg-dice-kp-eca
+2.23.133.5.4.100.10 = ASN1:NULL # tcg-dice-kp-assertInit
+2.23.133.5.4.100.8 = ASN1:NULL # tcg-dice-kp-attestInit
+
+[ device_ca_spdm_cert_oids ]
+id-DMTF-hardware-identity = OID:1.3.6.1.4.1.412.274.2
+
+[ alias_ca ]
+basicConstraints = CA:true
+keyUsage = cRLSign, keyCertSign, digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment, keyAgreement, keyCertSign, cRLSign
+subjectKeyIdentifier = hash
+extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning
+
+1.3.6.1.4.1.412.274.6 = ASN1:SEQUENCE:alias_ca_spdm_cert_oids # id-spdm-cert-oids
+
+2.23.133.5.4.100.12 = ASN1:NULL # tcg-dice-kp-eca
+2.23.133.5.4.100.7 = ASN1:NULL # tcg-dice-kp-identityLoc
+2.23.133.5.4.100.9 = ASN1:NULL # tcg-dice-kp-attestLoc
+2.23.133.5.4.100.11 = ASN1:NULL # tcg-dice-kp-assertLoc
+
+[ alias_ca_spdm_cert_oids ]
+id-DMTF-mutable-certificate = OID:1.3.6.1.4.1.412.274.5
+
+[ leaf ]
 basicConstraints = critical,CA:false
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectKeyIdentifier = hash
 subjectAltName = otherName:2.23.147;UTF8:Vendor=1b36:Device=0010:CC=010802:REV=02:SSVID=1af4:SSID=1100
-extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning
-1.3.6.1.4.1.412.274.6 = ASN1:OID:1.3.6.1.4.1.412.274.2
+# Add SPDM Responder Authentication { id-DMTF-spdm 3 } and SPDM Requester Authentication { id-DMTF-spdm 4 }
+extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning, 1.3.6.1.4.1.412.274.3, 1.3.6.1.4.1.412.274.4
 
-[ v3_inter ]
-basicConstraints = CA:true
-keyUsage = cRLSign, keyCertSign, digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment, keyAgreement, keyCertSign, cRLSign
-subjectKeyIdentifier = hash
-extendedKeyUsage = critical, serverAuth, clientAuth
+1.3.6.1.4.1.412.274.6 = ASN1:SEQUENCE:leaf_spdm_cert_oids # id-spdm-cert-oids
 
-[ OIDs ]
-id-DMTF = { 1 3 6 1 4 1 412 }
-id-DMTF-spdm = { id-DMTF 274 }
-id-DMTF-device-info = { id-DMTF-spdm 1 }
-id-DMTF-hardware-identity = { id-DMTF-spdm 2 }
+2.23.133.5.4.100.12 = ASN1:NULL # tcg-dice-kp-eca
+2.23.133.5.4.100.7 = ASN1:NULL # tcg-dice-kp-identityLoc
+2.23.133.5.4.100.9 = ASN1:NULL # tcg-dice-kp-attestLoc
+2.23.133.5.4.100.11 = ASN1:NULL # tcg-dice-kp-assertLoc
 
-tcg-dice-kp-identityInit = {tcg-dice-kp 6}
-tcg-dice-kp-assertInit = {tcg-dice-kp 10}
-tcg-dice-kp-attestInit = {tcg-dice-kp 8}
-tcg-dice-kp-eca = {tcg-dice-kp 12}
+[ leaf_spdm_cert_oids ]
+id-DMTF-mutable-certificate = OID:1.3.6.1.4.1.412.274.5
