--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 default = ["std"]
 
 no_std = []
-std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which"]
+std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which", "asn1-rs", "x509-parser"]
 
 [lib]
 name = "libspdm"
@@ -37,5 +37,7 @@ sha2 = { version = "0.10", optional = true}
 env_logger = { version = "0.10", optional = true}
 colored =  { version = "2.1", optional = true }
 which =  { version = "6.0", optional = true }
+asn1-rs = { version = "0.6", optional = true }
+x509-parser = { version = "0.15", optional = true }
 
 libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
