--- a/certs/openssl.cnf
+++ b/certs/openssl.cnf
@@ -1,5 +1,3 @@
-### REF: https://www.openssl.org/docs/man1.1.1/man3/ASN1_generate_nconf.html
-
 [ device_ca ]
 basicConstraints = CA:true
 keyUsage = cRLSign, keyCertSign, digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment, keyAgreement, keyCertSign, cRLSign
@@ -14,6 +12,9 @@ extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning
 2.23.133.5.4.100.8 = ASN1:NULL # tcg-dice-kp-attestInit
 
 [ device_ca_spdm_cert_oids ]
+id-spdm-cert-oid = SEQUENCE:device_ca_spdm_cert_hardware_identity_oid
+
+[ device_ca_spdm_cert_hardware_identity_oid ]
 id-DMTF-hardware-identity = OID:1.3.6.1.4.1.412.274.2
 
 [ alias_ca ]
@@ -30,6 +31,9 @@ extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning
 2.23.133.5.4.100.11 = ASN1:NULL # tcg-dice-kp-assertLoc
 
 [ alias_ca_spdm_cert_oids ]
+id-spdm-cert-oid = SEQUENCE:alias_ca_spdm_cert_mutable_oid
+
+[ alias_ca_spdm_cert_mutable_oid ]
 id-DMTF-mutable-certificate = OID:1.3.6.1.4.1.412.274.5
 
 [ leaf ]
@@ -48,4 +52,7 @@ extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning, 1.3.6.1.4.1.41
 2.23.133.5.4.100.11 = ASN1:NULL # tcg-dice-kp-assertLoc
 
 [ leaf_spdm_cert_oids ]
+id-spdm-cert-oid = SEQUENCE:leaf_spdm_cert_mutabl_oid
+
+[ leaf_spdm_cert_mutabl_oid ]
 id-DMTF-mutable-certificate = OID:1.3.6.1.4.1.412.274.5
