certs: Don't set TCG or SPDM OIDs in Intermediate CAs
We don't need to set the SPDM or TCG OIDs in the Intermediate CAs and in
practice these won't be set, so let's not set them as well.

Signed-off-by: Alistair Francis <alistair.francis@wdc.com>

--- a/certs/openssl.cnf
+++ b/certs/openssl.cnf
@@ -1,3 +1,9 @@
+[ inter_ca ]
+basicConstraints = CA:true
+keyUsage = cRLSign, keyCertSign, digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment, keyAgreement, keyCertSign, cRLSign
+subjectKeyIdentifier = hash
+extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning
+
 [ device_ca ]
 basicConstraints = CA:true
 keyUsage = cRLSign, keyCertSign, digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment, keyAgreement, keyCertSign, cRLSign
