gitignore: Ignore more cbor working files
Signed-off-by: Alistair Francis <alistair.francis@wdc.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ certs/slot*/immutable.sha
 
 manifest.cbor
 manifest/manifest.out.cbor
-manifest/responder_manifest.cbor
+manifest/*responder_manifest.cbor
 manifest/*.pretty
 
 retrieved_slot_id*
