Add dynamic image measurement
Add a command line argument for responders to enable dynamic image
measurement. This allows us to more accuratly model a real respnoder.

At startup we spawn two threads to hash the "kernel" and the
application. We currently join them before running the responder, we
actually only need to do this before generating the measurement, but
there isn't a nice way to do that from the libspdm Rust library. I
thought of a closure callback, but it's all a bit messy so the current
approach will do for now.

`libspdm_fill_measurement_image_hash_block()` will now dynamically use a
type of image block based on the init status of the `Lazy`
`DYN_IMAGE_MEASURE`.

Signed-off-by: Wilfred Mallawa <wilfred.mallawa@wdc.com>
Signed-off-by: Alistair Francis <alistair.francis@wdc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 default = ["std"]
 
 no_std = []
-std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which", "asn1-rs", "x509-parser", "minicbor", "minicbor-derive"]
+std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which", "asn1-rs", "x509-parser", "minicbor", "minicbor-derive", "async-std", "futures"]
 
 [lib]
 name = "libspdm"
@@ -41,5 +41,7 @@ asn1-rs = { version = "0.6", optional = true }
 x509-parser = { version = "0.15", optional = true }
 minicbor = { git = "https://gitlab.com/twittner/minicbor.git", features = ["half", "alloc", "std"], optional = true }
 minicbor-derive = { git = "https://gitlab.com/twittner/minicbor.git", features = ["alloc", "std"], optional = true }
+async-std = { version = "1.12", features = ["attributes"], optional = true }
+futures = { version = "0.3", optional = true }
 
 libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
