transport: storage: add scsi support
Signed-off-by: Wilfred Mallawa <wilfred.mallawa@wdc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,6 @@ minicbor-derive = { version = "0.15", features = [
 ], optional = true }
 async-std = { version = "1.12", features = ["attributes"], optional = true }
 futures = { version = "0.3", optional = true }
-nix = { version = "0.29.0", features = ["user"], optional = true }
+nix = { version = "0.29.0", features = ["user", "fs"], optional = true }
 libmctp = { version = "0.2" }
 inquire = { version = "0.7.5", optional = true}
