--- a/certs/alias/openssl.cnf
+++ b/certs/alias/openssl.cnf
@@ -28,13 +28,23 @@ id-spdm-cert-oid = SEQUENCE:alias_ca_spdm_cert_mutable_oid
 [ alias_ca_spdm_cert_mutable_oid ]
 id-DMTF-mutable-certificate = OID:1.3.6.1.4.1.412.274.5
 
-[ leaf ]
+[ leaf_requester ]
 basicConstraints = critical,CA:false
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectKeyIdentifier = hash
 subjectAltName = otherName:2.23.147;UTF8:Vendor=1b36:Device=0010:CC=010802:REV=02:SSVID=1af4:SSID=1100
-# Add SPDM Responder Authentication { id-DMTF-spdm 3 }, SPDM Requester Authentication { id-DMTF-spdm 4 }, tcg-dice-kp-eca, tcg-dice-kp-identityLoc, tcg-dice-kp-attestLoc, tcg-dice-kp-assertLoc
-extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning, 1.3.6.1.4.1.412.274.3, 1.3.6.1.4.1.412.274.4, 2.23.133.5.4.100.12, 2.23.133.5.4.100.7, 2.23.133.5.4.100.9, 2.23.133.5.4.100.11
+# Add SPDM Requester Authentication { id-DMTF-spdm 4 }, tcg-dice-kp-eca, tcg-dice-kp-identityLoc, tcg-dice-kp-attestLoc, tcg-dice-kp-assertLoc
+extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning, 1.3.6.1.4.1.412.274.4, 2.23.133.5.4.100.12, 2.23.133.5.4.100.7, 2.23.133.5.4.100.9, 2.23.133.5.4.100.11
+
+1.3.6.1.4.1.412.274.6 = ASN1:SEQUENCE:leaf_spdm_cert_oids # id-spdm-cert-oids
+
+[ leaf_responder ]
+basicConstraints = critical,CA:false
+keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+subjectKeyIdentifier = hash
+subjectAltName = otherName:2.23.147;UTF8:Vendor=1b36:Device=0010:CC=010802:REV=02:SSVID=1af4:SSID=1100
+# Add SPDM Responder Authentication { id-DMTF-spdm 3 }, tcg-dice-kp-eca, tcg-dice-kp-identityLoc, tcg-dice-kp-attestLoc, tcg-dice-kp-assertLoc
+extendedKeyUsage = critical, serverAuth, clientAuth, OCSPSigning, 1.3.6.1.4.1.412.274.3, 2.23.133.5.4.100.12, 2.23.133.5.4.100.7, 2.23.133.5.4.100.9, 2.23.133.5.4.100.11
 
 1.3.6.1.4.1.412.274.6 = ASN1:SEQUENCE:leaf_spdm_cert_oids # id-spdm-cert-oids
 
