github/workflows/ci.yml: libspdm: update build params
Update the CI workflow `libspdm` build parameters for compatibility with
`libspdm` version 3.5.0.

Signed-off-by: Wilfred Mallawa <wilfred.mallawa@wdc.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,8 @@ jobs:
                   -DLIBSPDM_ENABLE_CAPABILITY_EVENT_CAP=0 \
                   -DLIBSPDM_ENABLE_CAPABILITY_MEL_CAP=0 \
                   -DLIBSPDM_HAL_PASS_SPDM_CONTEXT=1 \
+                  -DLIBSPDM_ENABLE_CAPABILITY_GET_KEY_PAIR_INFO_CAP=0 \
+                  -DLIBSPDM_ENABLE_CAPABILITY_SET_KEY_PAIR_INFO_CAP=0 \
                   " \
             .. ; \
           make -j8; \
@@ -107,6 +109,8 @@ jobs:
                   -DLIBSPDM_ENABLE_CAPABILITY_EVENT_CAP=0 \
                   -DLIBSPDM_ENABLE_CAPABILITY_MEL_CAP=0 \
                   -DLIBSPDM_HAL_PASS_SPDM_CONTEXT=1 \
+                  -DLIBSPDM_ENABLE_CAPABILITY_GET_KEY_PAIR_INFO_CAP=0 \
+                  -DLIBSPDM_ENABLE_CAPABILITY_SET_KEY_PAIR_INFO_CAP=0 \
                   -DMBEDTLS_PLATFORM_MS_TIME_ALT \
                   " \
             .. ; \
