--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,6 @@ std = [
     "inquire",
     "page_size",
 ]
-page_size = ["dep:page_size"]
 
 [lib]
 name = "libspdm"
@@ -75,6 +74,6 @@ minicbor-derive = { version = "0.15", features = [
 ], optional = true }
 async-std = { version = "1.12", features = ["attributes"], optional = true }
 futures = { version = "0.3", optional = true }
-nix = { version = "0.29.0", features = ["user", "fs"], optional = true }
+nix = {version = "0.29.0", features = ["user", "fs", "ioctl"], optional = true }
 libmctp = { version = "0.2" }
 inquire = { version = "0.7.5", optional = true}
