--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update; \
-          sudo apt-get install -y cmake libclang-dev libpci-dev libssl-dev python3-dev gem; \
+          sudo apt-get install -y cmake libclang-dev libpci-dev libssl-dev python3-dev gem libnvme-dev; \
           sudo gem install cbor-diag;
 
       - name: Build libspdm
