--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,8 @@ colored =  { version = "2.1", optional = true }
 which =  { version = "6.0", optional = true }
 asn1-rs = { version = "0.6", optional = true }
 x509-parser = { version = "0.15", optional = true }
-minicbor = { git = "https://gitlab.com/twittner/minicbor.git", features = ["half", "alloc", "std"], optional = true }
-minicbor-derive = { git = "https://gitlab.com/twittner/minicbor.git", features = ["alloc", "std"], optional = true }
+minicbor = { version = "0.25", features = ["half", "alloc", "std"], optional = true }
+minicbor-derive = { version = "0.15", features = ["alloc", "std"], optional = true }
 async-std = { version = "1.12", features = ["attributes"], optional = true }
 futures = { version = "0.3", optional = true }
 nix = { version = "0.29.0", features = ["user"], optional = true }
