--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "SPDM-Utils"
 repository = "https://github.com/westerndigitalcorporation/SPDM-Utils"
 description = "SPDM-Utils is a Linux application designed to support, test and develop SPDM requesters and responders."
 version = "1.0.0"
-authors = ["Alistair Francis <alistair.francis@wdc.com>", "Wilfred Mallawa <wilfred.mallawa@wdc.com"]
+authors = [
+    "Alistair Francis <alistair.francis@wdc.com>",
+    "Wilfred Mallawa <wilfred.mallawa@wdc.com",
+]
 edition = "2021"
 readme = "README.md"
 
@@ -12,7 +15,24 @@ default = ["std"]
 libspdm_tests = []
 
 no_std = []
-std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which", "asn1-rs", "x509-parser", "minicbor", "minicbor-derive", "async-std", "futures", "nix"]
+std = [
+    "clap",
+    "memmap2",
+    "once_cell",
+    "sha2",
+    "env_logger",
+    "serialport",
+    "lazy_static",
+    "colored",
+    "which",
+    "asn1-rs",
+    "x509-parser",
+    "minicbor",
+    "minicbor-derive",
+    "async-std",
+    "futures",
+    "nix",
+]
 
 [lib]
 name = "libspdm"
@@ -32,16 +52,23 @@ serialport = { version = "4.3.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
 
 clap = { version = "4.0", features = ["derive"], optional = true }
-memmap2 = { version = "0.5", optional = true}
-once_cell = { version = "1.16", optional = true}
-sha2 = { version = "0.10", optional = true}
-env_logger = { version = "0.10", optional = true}
-colored =  { version = "2.1", optional = true }
-which =  { version = "6.0", optional = true }
+memmap2 = { version = "0.5", optional = true }
+once_cell = { version = "1.16", optional = true }
+sha2 = { version = "0.10", optional = true }
+env_logger = { version = "0.10", optional = true }
+colored = { version = "2.1", optional = true }
+which = { version = "6.0", optional = true }
 asn1-rs = { version = "0.6", optional = true }
 x509-parser = { version = "0.15", optional = true }
-minicbor = { version = "0.25", features = ["half", "alloc", "std"], optional = true }
-minicbor-derive = { version = "0.15", features = ["alloc", "std"], optional = true }
+minicbor = { version = "0.25", features = [
+    "half",
+    "alloc",
+    "std",
+], optional = true }
+minicbor-derive = { version = "0.15", features = [
+    "alloc",
+    "std",
+], optional = true }
 async-std = { version = "1.12", features = ["attributes"], optional = true }
 futures = { version = "0.3", optional = true }
 nix = { version = "0.29.0", features = ["user"], optional = true }
