--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,3 +75,10 @@ futures = { version = "0.3", optional = true }
 nix = { version = "0.29.0", features = ["user"], optional = true }
 libmctp = { version = "0.2" }
 inquire = { version = "0.7.5", optional = true}
+
+# Clippy lints that we ignore
+# These arne't ignored for a good reason, just due to historical reasons
+[lints.clippy]
+not_unsafe_ptr_arg_deref = "allow"
+missing_safety_doc = "allow"
+result_unit_err = "allow"
