--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,11 @@ jobs:
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.81
           profile: minimal
           default: true
           components: rustfmt, clippy
+          target: thumbv7em-none-eabi
 
       - name: Install dependencies
         run: |
