bindgen: use latest upstream git
We need to use the latest upstream git of bindgen for the following
reasons.

1. Support for wrap_unsafe_ops() which generates bindings compliant
   with rust24. Where unsafe calls within unsafe functions are wrapped
   in unsafe blocks.

2. [1] in preperation for SPDM storoage, there are fields named `gen` in
   particular structures within `libnvme`. `gen` is now a rust keyword
   and the latest release version of bindgen (0.71.1) does not yet support it. So
   use the latest git to get all the updates since we have already
   switched over to rust24.

[1] https://github.com/rust-lang/rust-bindgen/issues/3093

Signed-off-by: Wilfred Mallawa <wilfred.mallawa@wdc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ name = "spdm_utils"
 path = "src/main.rs"
 
 [build-dependencies]
-bindgen = "0.71.1"
+bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git" }
 which = "6.0.0"
 
 [dependencies]
