--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,15 @@ jobs:
           submodules: recursive
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 1.85
-          profile: minimal
-          default: true
           components: rustfmt, clippy
-          target: thumbv7em-none-eabi
+          targets: thumbv7em-none-eabi
 
       - name: Install dependencies
         run: |
           sudo apt-get update; \
-          sudo apt-get install -y cmake libclang-dev libpci-dev libssl-dev python3-dev gem; \
+          sudo apt-get install -y cmake clang libclang-dev libpci-dev libssl-dev python3-dev gem; \
           sudo gem install cbor-diag;
 
       - name: Build libspdm
@@ -35,7 +32,7 @@ jobs:
           mkdir build; cd build; \
           cmake \
             -DARCH=x64 \
-            -DTOOLCHAIN=GCC \
+            -DTOOLCHAIN=CLANG \
             -DTARGET=Debug \
             -DCRYPTO=openssl \
             -DENABLE_BINARY_BUILD=1 \
