--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,10 @@ jobs:
           submodules: recursive
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 1.85
-          profile: minimal
-          default: true
           components: rustfmt, clippy
-          target: thumbv7em-none-eabi
+          targets: thumbv7em-none-eabi
 
       - name: Install dependencies
         run: |
