Fixup new clippy failures
Signed-off-by: Alistair Francis <alistair.francis@wdc.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,3 +82,4 @@ inquire = { version = "0.7.5", optional = true}
 not_unsafe_ptr_arg_deref = "allow"
 missing_safety_doc = "allow"
 result_unit_err = "allow"
+doc_overindented_list_items = "allow"
